--- a/sample-input.html
+++ b/sample-input.html
@@ -7,8 +7,8 @@
 <h2>Getting input</h2>
 
 <form>
-    <label for="form1_age">What is your age </label>
-    <input type ="number" id="form1_age" name="form1_age" min=10 max=50 step=2 value=30> <br>
+    <label for="form1_age">Enter your secret phrase </label>
+    <input type ="password" id="form1_age" name="form1_age" value="let me in" min=10 max=50 step=2 value=30> <br>
 
     <label for="form1_nick">What is your nickname </label>
     <input type ="text" id="form1_nick" name="form1_nick" autofocus> <br>
