--- a/sample-input.html
+++ b/sample-input.html
@@ -7,19 +7,19 @@
 <h2>Getting input</h2>
 
 <form>
-    <label for="form1_age">Enter your secret phrase </label>
+    <label for="form1_secret">Enter your secret phrase </label>
     <input type ="password" id="form1_age" name="form1_age" value="let me in" min=10 max=50 step=2 value=30> <br>
 
-    <label for="form1_nick">What is your nickname </label>
+    <label for="form1_pharse">Enter a phrase </label>
     <input type ="text" id="form1_nick" name="form1_nick" autofocus> <br>
 
-    <input type="button" onclick="resolveForm()" value="Get values from form">
+    <input type="button" onclick="processPhrase()" value="Check the phrase">
 </form>
 
 
 <p id="result">This text will be replaced </p>
 
-<script> 
+<script type="text/javascript"> 
 
 function resolveForm (){
     console.log("Getting form values")
@@ -33,6 +33,15 @@ function resolveForm (){
     } else {
         out.innerHTML = "Values were not confirmed"
     }
+}
+function processPhrase(){
+    console.log("Check the pharse")
+    if(form1.secret.value == form1.pharse.value) {
+      alert("Access allowed");
+      form1.secret.focus();
+      return true;
+
+
 }
 </script>
 
