--- a/sample-input.html
+++ b/sample-input.html
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
 <html>
  
-<body><title>Assignment-6</title>
-    <h1>Input Form</h1>
+<body>
 
 <h2>Getting input</h2>
 
 <form>
-    <label for="form1">Enter your secret phrase </label>
-    <input type ="password" id="form1" name="form1" value="let me in" min=10 max=50 step=2 value=30> <br>
+    <label for="form1_age">What is your age </label>
+    <input type ="number" id="form1_age" name="form1_age" min=10 max=50 step=2 value=30> <br>
 
-    <label for="form2">Enter a phrase </label>
-    <input type ="text" id="form2" name="form2" autofocus> <br>
+    <label for="form1_nick">What is your nickname </label>
+    <input type ="text" id="form1_nick" name="form1_nick" autofocus> <br>
 
-    <input type="button" onclick="processPhrase()" value="Check the phrase">
+    <input type="button" onclick="resolveForm()" value="Get values from form">
 </form>
 
 
 <p id="result">This text will be replaced </p>
 
-<script type="text/javascript"> 
+<script> 
 
 function resolveForm (){
     console.log("Getting form values")
@@ -33,15 +32,6 @@ function resolveForm (){
     } else {
         out.innerHTML = "Values were not confirmed"
     }
-}
-function processPhrase(){
-    console.log("Check the pharse")
-    if(form1.value == form2.value) {
-      alert("Access allowed");
-      form1.secret.focus();
-      return true;
-
-
 }
 </script>
 
