--- a/sample-input.html
+++ b/sample-input.html
@@ -12,7 +12,7 @@
     <label for="form1_nick">Enter a pharse </label>
     <input type ="text" id="form1_nick" name="form1_nick" autofocus> <br>
 
-    <input type="button" onclick="resolveForm()" value="Check the phrase">
+    <input type="button" onclick="resolveForm()" value="Check the pharse">
 </form>
 
 
@@ -24,7 +24,7 @@ function resolveForm (){
     console.log("Getting form values")
     age = document.getElementById("form1_age").value
     nick = document.getElementById("form1_nick").value
-    
+    confirmed = confirm("Are these the values? "+age+" and "+nick)
     
     out = document.getElementById("result")
     if(confirmed){
