--- a/sample-input.html
+++ b/sample-input.html
@@ -7,7 +7,7 @@
 
 <form>
     <label for="form1_age">Enter secret phrase </label>
-    <input type ="password" id="form1_age" name="form1_age" min=10 max=50 step=2 value=30> <br>
+    <input type ="password" value="letmein" id="form1_age" name="form1_age" min=10 max=50 step=2 value=30> <br>
 
     <label for="form1_nick">Enter a pharse </label>
     <input type ="text" id="form1_nick" name="form1_nick" autofocus> <br>
