--- a/sample-input.html
+++ b/sample-input.html
@@ -27,7 +27,7 @@ function resolveForm (){
     confirmed = confirm("Are these the values? "+age+" and "+nick)
     
     out = document.getElementById("result")
-    if(age.value==nick.value){
+    if(age.document.getElementById("form1_age").value==nick.document.getElementById("form1_nick").value){
         alert("Access allowed")
     } else {
         alert("Access denied")
