--- a/sample-input.html
+++ b/sample-input.html
@@ -2,6 +2,8 @@
 <html>
  
 <body>
+    <title>Assignment-6</title>
+    <h1>Password checking</h1>
 
 <h2>Getting input</h2>
 
@@ -27,7 +29,7 @@ function resolveForm (){
     confirmed = confirm("Are these the values? "+age+" and "+nick)
     
     out = document.getElementById("result")
-    if((age.value).equals(nick.value)){
+    if(age.value==nick.value){
         alert("Access allowed")
     } else {
         alert("Access denied")
