--- a/sample-input.html
+++ b/sample-input.html
@@ -18,7 +18,7 @@
 </form>
 
 
-<p id="result">This secret pharse is checked </p>
+<p id="result"> Count for correct is 1 and count for wrong is 0 </p>
 
 <script> 
 
