--- a/sample-input.html
+++ b/sample-input.html
@@ -2,23 +2,21 @@
 <html>
  
 <body>
-    <title>Assignment-6</title>
-    <h1>Password checking</h1>
 
 <h2>Getting input</h2>
 
 <form>
-    <label for="form1_age">Enter secret phrase </label>
-    <input type ="password" value="letmein" id="form1_age" name="form1_age" min=10 max=50 step=2 value=30> <br>
+    <label for="form1_age">What is your age </label>
+    <input type ="number" id="form1_age" name="form1_age" min=10 max=50 step=2 value=30> <br>
 
-    <label for="form1_nick">Enter a pharse </label>
+    <label for="form1_nick">What is your nickname </label>
     <input type ="text" id="form1_nick" name="form1_nick" autofocus> <br>
 
-    <input type="button" onclick="resolveForm()" value="Check the pharse">
+    <input type="button" onclick="resolveForm()" value="Get values from form">
 </form>
 
 
-<p id="result"> Count for correct is 1 and count for wrong is 0 </p>
+<p id="result">This text will be replaced </p>
 
 <script> 
 
@@ -29,10 +27,10 @@ function resolveForm (){
     confirmed = confirm("Are these the values? "+age+" and "+nick)
     
     out = document.getElementById("result")
-    if(age.value==nick.value){
-        alert("Access allowed")
+    if(confirmed){
+        out.innerHTML = "Values were confirmed"
     } else {
-        alert("Access denied")
+        out.innerHTML = "Values were not confirmed"
     }
 }
 </script>
