--- a/pass.html
+++ b/pass.html
@@ -8,13 +8,13 @@
 <h2>Getting input</h2>
 
 <form>
-    <label for="form1_age">What is your age </label>
-    <input type ="number" id="form1_age" name="form1_age" min=10 max=50 step=2 value=30> <br>
+    <label for="form1_phrase">Enter the secret phrase </label>
+    <input type ="password" id="form1_phrase" name="form1_phrase" value="Let me in" min=10 max=50 step=2 value=30> <br>
 
-    <label for="form1_nick">What is your nickname </label>
-    <input type ="text" id="form1_nick" name="form1_nick" autofocus> <br>
+    <label for="form1_toCheck">Enter a phrase </label>
+    <input type ="text" id="form1_toCheck" name="form1_toCheck" autofocus> <br>
 
-    <input type="button" onclick="resolveForm()" value="Get values from form">
+    <input type="button" onclick="processPhrase()" value="Check the phrase">
 </form>
 
 
@@ -22,18 +22,24 @@
 
 <script> 
 
-function resolveForm (){
-    console.log("Getting form values")
-    age = document.getElementById("form1_age").value
-    nick = document.getElementById("form1_nick").value
-    confirmed = confirm("Are these the values? "+age+" and "+nick)
+let correct = 0;
+let wrong = 0;
+
+function processPhrase(){
+    secret_phrase = document.getElementById("form1_phrase").value
+    check_phrase = document.getElementById("form1_toCheck").value
     
     out = document.getElementById("result")
-    if(confirmed){
-        out.innerHTML = "Values were confirmed"
+    if(secret_phrase === check_phrase){
+        correct += 1;
+        alert("Access allowed");
+        out.innerHTML = correct;
     } else {
-        out.innerHTML = "Values were not confirmed"
+        wrong += 1;
+        alert("Access denied");
+        out.innerHTML = wrong;
     }
+
 }
 </script>
 
