--- a/pass.html
+++ b/pass.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html>
- 
-<body>
     <title>Assignment-6</title>
     <h1>Pass pharse by Sai Tejaswee Vissapragada</h1>
+ 
+<body>
 
 <h2>Getting input</h2>
 
 <form>
-    <label for="form1_phrase">Enter the secret phrase </label>
-    <input type ="password" id="form1_phrase" name="form1_phrase" value="Let me in" min=10 max=50 step=2 value=30> <br>
+    <label for="form1_age">What is your age </label>
+    <input type ="number" id="form1_age" name="form1_age" min=10 max=50 step=2 value=30> <br>
 
-    <label for="form1_toCheck">Enter a phrase </label>
-    <input type ="text" id="form1_toCheck" name="form1_toCheck" autofocus> <br>
+    <label for="form1_nick">What is your nickname </label>
+    <input type ="text" id="form1_nick" name="form1_nick" autofocus> <br>
 
-    <input type="button" onclick="processPhrase()" value="Check the phrase">
+    <input type="button" onclick="resolveForm()" value="Get values from form">
 </form>
 
 
@@ -22,24 +22,18 @@
 
 <script> 
 
-let correct = 0;
-let wrong = 0;
-
-function processPhrase(){
-    secret_phrase = document.getElementById("form1_phrase").value
-    check_phrase = document.getElementById("form1_toCheck").value
+function resolveForm (){
+    console.log("Getting form values")
+    age = document.getElementById("form1_age").value
+    nick = document.getElementById("form1_nick").value
+    confirmed = confirm("Are these the values? "+age+" and "+nick)
     
     out = document.getElementById("result")
-    if(secret_phrase === check_phrase){
-        correct += 1;
-        alert("Access allowed");
-        out.innerHTML = correct;
+    if(confirmed){
+        out.innerHTML = "Values were confirmed"
     } else {
-        wrong += 1;
-        alert("Access denied");
-        out.innerHTML = wrong;
+        out.innerHTML = "Values were not confirmed"
     }
-
 }
 </script>
 
