--- a/pass.html
+++ b/pass.html
@@ -39,7 +39,8 @@
         </script>
 
 
-<p id="result">Wrong: </p>
+<p id="result">Wrong: </p><br>
+<p id="result">Correct:</p>
 
 <script> 
 var correct=0
