--- a/pass.html
+++ b/pass.html
@@ -15,6 +15,9 @@
     
         <input type="button" onclick="processPhrase()" value="Check the phrase">
     </form>
+    <div class="container">
+        <img src="snake.jpg" id="image" class="img-fluid" alt="snake" height="200" width="200" onclick=newImage()>
+    </div>
     <script> 
 
         var correct=0
@@ -59,6 +62,23 @@ function resolveForm (){
         out.innerHTML = "Values were not confirmed"
     }
 }
+function newImage(img) 
+    {
+            switch (currentImage)
+            {
+                case 1:
+                    document.getElementById("image").src ="snake.jpg";
+                    currentImage++;
+                    break;
+                case 2: document.getElementById("image").src ="deer.jpg";
+                    currentImage++;
+                    break;
+                case 3: document.getElementById("image").src ="seal.jpg";
+                    currentImage = 1;
+                    break;
+                default: currentImage = 1;
+            }
+    }
 </script>
 
 </body>
