--- a/car.html
+++ b/car.html
@@ -3,6 +3,12 @@
 <head>
     <title>Car page</title>
     <h1>Sai Tejaswee Vissapragada orders a car</h1>
+    <style>
+        form{
+            background-color: blueviolet;
+
+        }
+    </style>
 </head>
 <body>
     <form>
