--- a/arthmetic.html
+++ b/arthmetic.html
@@ -3,6 +3,12 @@
     <head>
         <title>Arthmetic page</title>
         <h1>Sai Tejaswee Vissapragada computes</h1>
+        <style>
+            form{
+                border: crimson;
+                background-color: darkkhaki;
+            }
+        </style>
     </head>
     <body>
         <form>
