--- a/arthmetic.html
+++ b/arthmetic.html
@@ -5,7 +5,7 @@
         <h1>Sai Tejaswee Vissapragada computes</h1>
         <style>
             form{
-                border: crimson;
+                border: solid crimson;
                 background-color: darkkhaki;
             }
         </style>
