--- a/pass.html
+++ b/pass.html
@@ -3,7 +3,12 @@
  <head>
      <title>Assignment-6</title>
      <h1>Pass phrase by Sai Tejaswee Vissapragada</h1>
-
+    <style>
+        form{
+            background-color: hotpink;
+            border: solid blue;
+        }
+    </style>
 </head>
 <body>
     <form>
