--- a/pass.html
+++ b/pass.html
@@ -8,6 +8,9 @@
             background-color: hotpink;
             border: solid blue;
         }
+        h1{
+            text-emphasis-color: green;
+        }
     </style>
 </head>
 <body>
