--- a/pass.html
+++ b/pass.html
@@ -9,7 +9,7 @@
             border: solid blue;
         }
         h1{
-            text-emphasis-color: green;
+            font-family: Arial, Helvetica, sans-serif;
         }
     </style>
 </head>
