--- a/pass.html
+++ b/pass.html
@@ -10,7 +10,7 @@
         }
         h1{
             font-family: Arial, Helvetica, sans-serif;
-            font: text color red;
+            color: red;
         }
     </style>
 </head>
