--- a/pass.html
+++ b/pass.html
@@ -7,6 +7,7 @@
         form{
             background-color: hotpink;
             border: solid blue;
+            color:chartreuse;
         }
         h1{
             font-family: Arial, Helvetica, sans-serif;
