--- a/pass.html
+++ b/pass.html
@@ -13,6 +13,9 @@
             font-family: Arial, Helvetica, sans-serif;
             color: red;
         }
+        div{
+            border: solid rgb(64, 172, 226);
+        }
     </style>
 </head>
 <body>
